ctf and challenges improvement challenger models improvement blog comment bug fixed sidebar login/register when authenticated solved

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
         </button>
-        <a class="brand" href="/challenge/">ctfBulletin</a>
+        <a class="brand" href="/challenges/">ctfBulletin</a>
         <div class="nav-collapse collapse">
     <ul class="nav pull-right">
 
@@ -60,7 +60,7 @@
 <hr>
     <footer style="position: relative">
     <div class="container">
-        <p>&copy; 2014 ctfBullentin : all right reserved for <a href="http://www.fb.com/sayf.e.farhani">Sayf piratos</a></p>
+        <p>&copy; 2014 ctfBullentin : all rights reserved for <a href="http://www.fb.com/sayf.e.farhani">Sayf piratos</a></p>
     </div>
 </footer>
     <script src="{% static 'js/jquery-2.1.1.min.js' %}"></script>
