--- a/templates/talk/thread.html
+++ b/templates/talk/thread.html
@@ -18,7 +18,7 @@
                 </div>
             <hr>
             <ul c style="list-style-type: None">
-                {% for message in messages %}
+                {% for message in messages %}  <!-- TODO add messages deletion -->
                   <div id="reply">
                     <div class="profile_pic"><img src="{% static 'img/avatar.png' %}"></div>
                     <div class="reply">
