--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -10,17 +10,19 @@
     <ul style="list-style-type: None">
     {% if articles %}
     {% for article in articles %}
-        <li><h3>> {{ article.title }}</h3></li>
+        <li><h4 style="text-decoration: underline"> {{ article.title }}</h4></li>
         <ul style="list-style-type: None">
             <li><h5 style="color: #942a25">author : {{ article.author.username }}</h5></li>
             <li style="font-family: Verdana, 'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif">{{ article.content|truncatechars:300 }}</li>
-            <a href="/blog/read/{{ article.title|url_it }}/"><button class="btn btn-danger">read complete article</button></a>
+            <a href="/blog/read/{{ article.title|url_it }}/"><button class="btn ">read complete article</button></a>
             <li class="text-info" style="float: right">{{ article.date_post }}</li>
             <hr>
         </ul>
     {% endfor %}
     {% else %}
-        <h2 class="text-error">no articles found !</h2>
+      <div class="alert alert-block alert-error">
+        no articles found !
+      </div>
     {% endif %}
     </ul>
 {% endblock %}
