--- a/templates/challenges/index.html
+++ b/templates/challenges/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 {% block body %}
-    {% if list %}
+    <!-- {% if list %}
         {% for ch in list %}
             <p>category</p>
             <p>{{ ch.category.name }}</p>
@@ -18,7 +18,19 @@
             {% endfor %}
         {% endfor %}
     {% else %}
-    {% endif %}
+        <h1> no challenges for now, get back soon !</h1>
+    {% endif %} -->
+    <div class="row">
+        <div class="span4" style="background-color: #000000; height: 150px;"></div>
+        <div class="span4" style="background-color: #000000; height: 150px;"></div>
+        <div class="span4" style="background-color: #000000; height: 150px;"></div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="span4" style="background-color: #000000; height: 150px;"></div>
+        <div class="span4" style="background-color: #000000; height: 150px;"></div>
+        <div class="span4" style="background-color: #000000; height: 150px;"></div>
+    </div>
 {% endblock %}
 </body>
 </html>
