--- a/templates/challenges/register.html
+++ b/templates/challenges/register.html
@@ -9,7 +9,7 @@
 {% block body %}
     <div id="myform">
     {% if regitered %}
-        <p class="text-success text-center">you have registered successfully !</p>
+        <p class="text-success text-center">you have been registered successfully !</p>
         <script type="application/javascript">
         $(document).ready(function(){
             setTimeout(function(){ window.location = '/talk/index/';}, 5000);
