correcting thambnail implementation

--- a/templates/blog/read.html
+++ b/templates/blog/read.html
@@ -26,7 +26,7 @@
     <div id="comment">
                 {% for message in messages %}
                   <div id="reply">
-                    <div class="profile_pic"><img src="{% static 'img/avatar.png' %}"></div>
+                    <div class="profile_pic"><img src="media/profile_pics/{{ message.commenter.picture.url }}"></div>
                     <div class="reply">
                         <div id="reply_content">
                         <li style="color: darkblue"><strong>{{ message.commenter }} :</strong></li>
