--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,15 @@
 {% load static %}
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- TODO icon , maybe change it later -->
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
     <!-- Bootstrapp -->
     <link href="{% static 'css/bootstrap-fluid-adj.css' %}" rel="stylesheet">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
-    <link href="{% static 'talk/css/talk.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jquery-ui.css' %}" rel="stylesheet">
+    <link href="{% static 'css/navbar.css' %}" rel="stylesheet">
     {% block linking %}{% endblock %}
     <title>{% block title %}ctfBulletin{% endblock %}</title>
 </head>
@@ -25,12 +29,14 @@
     <ul class="nav pull-right">
 
             {% if user.is_authenticated %}
-                <li class="navbar-link"><a href="#">{{ user.username }}</a></li> <!-- link to the profile -->
+                <li class="navbar-link"><a href="/challenges/profile/">{{ user.username }}</a></li> <!-- link to the profile -->
+                <li class="navbar-link"><a id="score">score: {{ challenger.score }}</a></li>
+                {%  block navbar %}{% endblock %}
             {% else %}
+                <li class="navbar-link"><a href="#">anonymous</a></li>
             {% endif %}
     </ul>
     <ul class="nav" >
-        <li><a href="/admin">Administration</a></li>
     </ul>
        </div>
    </div>
@@ -65,6 +71,7 @@
 </footer>
     <script src="{% static 'js/jquery-2.1.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery-ui.js' %}"></script>
     <script src="{% static 'js/jquery.columnizer.js' %}"></script>
     {% block scripts %}{% endblock %}
 </body>
